trying to fix iOS not showing button #2

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -111,7 +111,7 @@ footer div img {
   height: 65%;
 }
 
-input {
+button {
 -webkit-appearance: none;
 -moz-appearance: none;
 appearance: none;
